--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -219,7 +219,7 @@
 <!--  </div>-->
 <!--</div>-->
 
-<div class="page-heading">
+<div class="page-heading" id="main-container">
   <section class="section">
     <div class="card">
       <div class="card-header">
@@ -229,64 +229,85 @@
         <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns">
           <div class="dataTable-top row">
             <div class="col-4">
-              <button class="btn btn-primary" (click)="onOpenModal('add',$any(null))">CREATE</button>
+              <button class="btn btn-outline-primary" (click)="onOpenModal('add',$any(null))" style="width: 90px">
+                CREATE
+              </button>
               <!--            <button class="btn btn-danger" data-toggle="modal" data-target="#deleteAuthorModal">DELETE</button>-->
             </div>
-            <div class="col-4">
+            <div class="col-5">
             </div>
             <div class="col-3 text-end">
-              <label style="margin-right: 10px">Authors per page</label>
-              <div class="dataTable-dropdown">
-                <select class="dataTable-selector form-select" ngModel name="pageSize" (ngModelChange)="changeElementsPerPage($event)">
-                  <option value="5" [ngValue]="5" selected>5</option>
-                  <option value="10" [ngValue]="10">10</option>
-                  <option value="20" [ngValue]="20">20</option>
-                </select>
-              </div>
-            </div>
-            <div class="col-1">
-              <button class="mat-icon-button" data-toggle="collapse" href="#collapseExample" role="button"><a
-                class="fa fa-filter"></a></button>
+              <button class="btn btn-outline-secondary" data-toggle="collapse" href="#collapseExample"
+                      style="width: 90px">FILTER
+              </button>
             </div>
           </div>
           <div class="dataTable-container">
             <div class="collapse" id="collapseExample">
               <div class="card card-body">
                 <form #filterForm="ngForm" (ngSubmit)="filterAuthors()">
-                  <div class="row align-items-center">
-                    <div class="col-md-1 text-end" style="padding: 0px 0px">
-                      Name:
-                    </div>
-                    <div class="col-md-3 text-center">
-                      <input class="form-control" type="text" ngModel name="name" maxlength="128">
-                    </div>
-                    <div class="col-md-1 text-end" style="padding: 0px 0px">
-                      Rating from:
-                    </div>
-                    <div class="col-md-1 text-center">
-                      <input class="form-control" type="number" ngModel name="fromRating" min="0" max="5">
-                    </div>
-                    <div class="col-md-1 text-end" style="padding: 0px 0px">
-                      Rating to:
-                    </div>
-                    <div class="col-md-1 text-center">
-                      <input class="form-control" type="number" ngModel name="toRating" min="0" max="5">
+                  <div id="filter-forms" class="row align-items-center">
+                    <div class="col-md-8" style="display: flex;align-items: center">
+                      <label style="margin-left:0px">Name:</label>
+                      <input class="form-control" type="text" ngModel name="name" maxlength="128" style="width: 200px">
+                      <label>Rating from:</label>
+                      <select class="dataTable-selector form-select" ngModel name="fromRating" style="width: auto">
+                        <option>0</option>
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                      </select>
+                      <label>Rating to:</label>
+                      <select class="dataTable-selector form-select" ngModel name="toRating" style="width: auto">
+                        <option>1</option>
+                        <option>2</option>
+                        <option>3</option>
+                        <option>4</option>
+                        <option>5</option>
+                      </select>
                     </div>
                     <div class="col-md-4 text-end">
-                      <button [disabled]="filterForm.invalid" type="submit" class="btn btn-success">Filter</button>
-                      <button type="button" (click)="resetForm(filterForm)" class="btn btn-primary">Reset</button>
+                      <button [disabled]="filterForm.invalid" type="submit" class="btn btn-outline-success"
+                              style="width: 90px">SEARCH
+                      </button>
+                      <button type="button" (click)="resetForm(filterForm)" class="btn btn-outline-dark"
+                              style="width: 90px">RESET
+                      </button>
                     </div>
                   </div>
                 </form>
               </div>
             </div>
-            <table class="table table-striped dataTable-table" id="table1">
+            <table class="table table-striped dataTable-table">
               <thead>
               <tr>
-                <th data-sortable="" style="width: 40%;"><a href="#" class="dataTable-sorter">First name</a></th>
-                <th data-sortable="" style="width: 40%;"><a href="#" class="dataTable-sorter">Second name</a></th>
-                <th style="width: 10%;"><a (click)="sortByColumn('secondName')" class="dataTable-sorter">Rating</a></th>
-                <th data-sortable="" style="width: 10%;"></th>
+                <th id="tableFirstName" style="width: 40%;"><a (click)="sortByColumn('firstName')">First name
+                  <em
+                    *ngIf="pageSortFilterParameters.sortField === 'firstName' && !pageSortFilterParameters.reverseForSorting"
+                    class="fa fa-sort-asc"></em>
+                  <em *ngIf="pageSortFilterParameters.sortField != 'firstName'" class="fa fa-sort"></em>
+                  <em
+                    *ngIf="pageSortFilterParameters.sortField === 'firstName' && pageSortFilterParameters.reverseForSorting"
+                    class="fa fa-sort-desc"></em></a></th>
+                <th id="tableSecondName" style="width: 40%;"><a (click)="sortByColumn('secondName')">Second name
+                  <em
+                    *ngIf="pageSortFilterParameters.sortField === 'secondName' && !pageSortFilterParameters.reverseForSorting"
+                    class="fa fa-sort-asc"></em>
+                  <em *ngIf="pageSortFilterParameters.sortField != 'secondName'" class="fa fa-sort"></em>
+                  <em
+                    *ngIf="pageSortFilterParameters.sortField === 'secondName' && pageSortFilterParameters.reverseForSorting"
+                    class="fa fa-sort-desc"></em></a></th>
+                <th id="tableRating" style="width: 10%;"><a (click)="sortByColumn('rating')">Rating
+                  <em
+                    *ngIf="pageSortFilterParameters.sortField === 'rating' && pageSortFilterParameters.reverseForSorting"
+                    class="fa fa-sort-asc"></em>
+                  <em *ngIf="pageSortFilterParameters.sortField != 'rating'" class="fa fa-sort"></em>
+                  <em
+                    *ngIf="pageSortFilterParameters.sortField === 'rating' && !pageSortFilterParameters.reverseForSorting"
+                    class="fa fa-sort-desc"></em></a></th>
+                <th id="tableButtons" style="width: 10%;"></th>
               </tr>
               </thead>
               <tbody>
@@ -296,7 +317,7 @@
                 <!--                      <input class="form-check-inline" type="checkbox" value="" id="flexCheckDefault">-->
                 <!--                    </div>-->
                 <!--                  </td>-->
-                <td>{{author.firstName}}</td>
+                <td class="">{{author.firstName}}</td>
                 <td>{{author.secondName}}</td>
                 <td>{{author.rating}}</td>
                 <td class="text-end">
@@ -314,13 +335,28 @@
             </table>
           </div>
           <div class="dataTable-bottom">
-            <div class="dataTable-info">Showing 1 to 10 of 26 entries</div>
-            <ul class="pagination pagination-primary float-end dataTable-pagination">
-              <li class="page-item pager"><a href="#" class="page-link" data-page="1">‹</a></li>
-              <li class="page-item active"><a href="#" class="page-link" data-page="1">1</a></li>
-              <li class="page-item"><a href="#" class="page-link" data-page="2">2</a></li>
-              <li class="page-item"><a href="#" class="page-link" data-page="3">3</a></li>
-              <li class="page-item pager"><a href="#" class="page-link" data-page="2">›</a></li>
+            <div class="dataTable-info">Showing {{1 + numberOfRecords * matPaginator.pageSize}}
+              to {{totalRecords <= ((1 + numberOfRecords) * matPaginator.pageSize) ? totalRecords : ((1 + numberOfRecords) * matPaginator.pageSize)}}
+              of {{totalRecords}} authors
+            </div>
+            <ul class="pagination pagination-primary float-end dataTable-pagination" style="align-items: center">
+              <label style="margin-right: 10px">Authors per page</label>
+              <div class="dataTable-dropdown">
+                <select class="dataTable-selector form-select" ngModel="5" name="pageSize"
+                        (ngModelChange)="changeElementsPerPage($event)">
+                  <option value="5" selected>5</option>
+                  <option value="10">10</option>
+                  <option value="20">20</option>
+                </select>
+                <li class="page-item pager"><a (click)="matPaginator.previousPage()" class="page-link" data-page="1">‹</a></li>
+<!--                <li class="page-item active"><a href="#" class="page-link" data-page="1">1</a></li>-->
+<!--                <li class="page-item"><a href="#" class="page-link" data-page="2">2</a></li>-->
+<!--                <li class="page-item"><a href="#" class="page-link" data-page="3">3</a></li>-->
+                <li class="page-item pager"><a (click)="matPaginator.nextPage()" class="page-link" data-page="2">›</a></li>
+              </div>
+              <ul class="pagination pagination-primary float-end dataTable-pagination">
+
+              </ul>
             </ul>
           </div>
         </div>
@@ -333,3 +369,41 @@
 <mat-paginator #matPaginator [length]="totalRecords" [pageSize]="5" [pageSizeOptions]="[5,10,20]"
                (page)="onPageChange($event)" aria-label="Select page" style="visibility: hidden">
 </mat-paginator>
+
+<div class="modal fade text-left" id="detailAuthorModal" tabindex="-1" aria-labelledby="myModalLabel33"
+     style="display: none;" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h4 class="modal-title" id="myModalLabel33">Login Form </h4>
+        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
+          <i data-feather="x">x</i>
+        </button>
+      </div>
+      <form action="#">
+        <div class="modal-body">
+          <label>Email: </label>
+          <div class="form-group">
+            <input type="text" placeholder="Email Address" class="form-control">
+          </div>
+          <label>Password: </label>
+          <div class="form-group">
+            <input type="password" placeholder="Password" class="form-control">
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-light-secondary" data-bs-dismiss="modal">
+            <i class="bx bx-x d-block d-sm-none"></i>
+            <span class="d-none d-sm-block">Close</span>
+          </button>
+          <button type="button" class="btn btn-primary ml-1" data-bs-dismiss="modal">
+            <i class="bx bx-check d-block d-sm-none"></i>
+            <span class="d-none d-sm-block">login</span>
+          </button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+
