--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -269,7 +269,7 @@
                       </select>
                     </div>
                     <div class="col-md-4 text-end">
-                      <button [disabled]="filterForm.invalid" type="submit" class="btn btn-outline-success"
+                      <button [disabled]="filterForm.invalid" type="submit" class="btn btn-outline-primary"
                               style="width: 90px">SEARCH
                       </button>
                       <button type="button" (click)="resetForm(filterForm)" class="btn btn-outline-dark"
@@ -317,7 +317,7 @@
                 <!--                      <input class="form-check-inline" type="checkbox" value="" id="flexCheckDefault">-->
                 <!--                    </div>-->
                 <!--                  </td>-->
-                <td class="">{{author.firstName}}</td>
+                <td>{{author.firstName}}</td>
                 <td>{{author.secondName}}</td>
                 <td>{{author.rating}}</td>
                 <td class="text-end">
@@ -335,34 +335,40 @@
             </table>
           </div>
           <div class="dataTable-bottom">
-            <div class="dataTable-info">Showing {{1 + numberOfRecords * matPaginator.pageSize}}
-              to {{totalRecords <= ((1 + numberOfRecords) * matPaginator.pageSize) ? totalRecords : ((1 + numberOfRecords) * matPaginator.pageSize)}}
-              of {{totalRecords}} authors
-            </div>
-            <ul class="pagination pagination-primary float-end dataTable-pagination" style="align-items: center">
-              <label style="margin-right: 10px">Authors per page</label>
-              <div class="dataTable-dropdown">
-                <select class="dataTable-selector form-select" ngModel="5" name="pageSize"
-                        (ngModelChange)="changeElementsPerPage($event)">
-                  <option value="5" selected>5</option>
-                  <option value="10">10</option>
-                  <option value="20">20</option>
-                </select>
-                <li class="page-item pager"><a (click)="matPaginator.previousPage()" class="page-link" data-page="1">‹</a></li>
-<!--                <li class="page-item active"><a href="#" class="page-link" data-page="1">1</a></li>-->
-<!--                <li class="page-item"><a href="#" class="page-link" data-page="2">2</a></li>-->
-<!--                <li class="page-item"><a href="#" class="page-link" data-page="3">3</a></li>-->
-                <li class="page-item pager"><a (click)="matPaginator.nextPage()" class="page-link" data-page="2">›</a></li>
-              </div>
-              <ul class="pagination pagination-primary float-end dataTable-pagination">
-
-              </ul>
-            </ul>
+            <table style="width: 100%;">
+              <tr>
+                <td>
+                  <div class="dataTable-info">Showing {{1 + numberOfRecords * matPaginator.pageSize}}
+                    to {{totalRecords <= ((1 + numberOfRecords) * matPaginator.pageSize) ? totalRecords : ((1 + numberOfRecords) * matPaginator.pageSize)}}
+                    of {{totalRecords}} authors
+                  </div>
+                </td>
+                <td style="display: flex; align-items: center;">
+                  <label style="margin-right: 10px">Authors per page</label>
+                  <select class="dataTable-selector form-select" ngModel="5" name="pageSize"
+                          (ngModelChange)="changeElementsPerPage($event)" style="width: auto;">
+                    <option value="5" selected>5</option>
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                  </select>
+                </td>
+                <td>
+                  <ul class="pagination pagination-primary float-end dataTable-pagination" style="align-items: center">
+                    <li class="page-item pager"><a (click)="matPaginator.previousPage()" class="page-link"
+                                                   data-page="1">‹</a></li>
+                    <!--                <li class="page-item active"><a href="#" class="page-link" data-page="1">1</a></li>-->
+                    <!--                <li class="page-item"><a href="#" class="page-link" data-page="2">2</a></li>-->
+                    <!--                <li class="page-item"><a href="#" class="page-link" data-page="3">3</a></li>-->
+                    <li class="page-item pager"><a (click)="matPaginator.nextPage()" class="page-link"
+                                                   data-page="2">›</a></li>
+                  </ul>
+                </td>
+              </tr>
+            </table>
           </div>
         </div>
       </div>
     </div>
-
   </section>
 </div>
 
@@ -370,40 +376,29 @@
                (page)="onPageChange($event)" aria-label="Select page" style="visibility: hidden">
 </mat-paginator>
 
-<div class="modal fade text-left" id="detailAuthorModal" tabindex="-1" aria-labelledby="myModalLabel33"
-     style="display: none;" aria-hidden="true">
+<div class="modal fade text-left" id="detailAuthorModal" data-backdrop="static" tabindex="-1" role="dialog"
+     aria-labelledby="detailAuthorModal"
+     aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="modal-title" id="myModalLabel33">Login Form </h4>
-        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Close">
-          <i data-feather="x">x</i>
+        {{detailAuthor.firstName}} {{detailAuthor.secondName}}
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">X</button>
+      </div>
+      <div class="modal-body">
+        <p>First name: {{detailAuthor.firstName}}</p>
+        <p>Second name: {{detailAuthor.secondName}}</p>
+        <div id="rating-line"><label style="margin-right: 10px">Rating:</label>
+          <div id="step" class="star-rating" title="{{detailAuthor.rating}}/5">
+            <div class="star-value" [ngStyle]="{'width': (detailAuthor.rating * 100 / 5)+ '%' } "></div>
+          </div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">
+          Close
         </button>
       </div>
-      <form action="#">
-        <div class="modal-body">
-          <label>Email: </label>
-          <div class="form-group">
-            <input type="text" placeholder="Email Address" class="form-control">
-          </div>
-          <label>Password: </label>
-          <div class="form-group">
-            <input type="password" placeholder="Password" class="form-control">
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-light-secondary" data-bs-dismiss="modal">
-            <i class="bx bx-x d-block d-sm-none"></i>
-            <span class="d-none d-sm-block">Close</span>
-          </button>
-          <button type="button" class="btn btn-primary ml-1" data-bs-dismiss="modal">
-            <i class="bx bx-check d-block d-sm-none"></i>
-            <span class="d-none d-sm-block">login</span>
-          </button>
-        </div>
-      </form>
     </div>
   </div>
 </div>
-
-
