--- a/frontend/src/assets/css/main.css
+++ b/frontend/src/assets/css/main.css
@@ -10943,11 +10943,15 @@ textarea.form-control-lg {
   z-index: 1051;
 }
 
-.error-snackbar {
+.mat-snack-bar-container {
   text-align: center;
+}
+.mat-simple-snackbar {
+  display: inline-block !important;
+}
+.error-snackbar {
   background: #dc3545;
 }
 .success-snackbar {
-  text-align: center;
   background: #198754;
 }
