added modals, validation for create and update input field, snackbars, fixes with pagination

--- a/frontend/src/app/views/author/author.component.css
+++ b/frontend/src/app/views/author/author.component.css
@@ -206,3 +206,15 @@ label {
   display: inline-flex;
   align-items: center;
 }
+
+table {
+  table-layout: fixed;
+}
+
+th,
+td {
+  overflow: hidden;
+}
+ul{
+
+}
