--- a/frontend/src/app/views/author/author.component.css
+++ b/frontend/src/app/views/author/author.component.css
@@ -202,7 +202,8 @@ label {
 .star-rating .star-value {
   background-size: 32px;
 }
-#rating-line{
+
+#rating-line {
   display: inline-flex;
   align-items: center;
 }
@@ -211,10 +212,7 @@ table {
   table-layout: fixed;
 }
 
-th,
-td {
-  overflow: auto;
-}
-ul{
-
+.fa {
+  size: auto;
+  opacity: 0.7;
 }
