--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -229,10 +229,14 @@
         <div class="dataTable-wrapper dataTable-loading no-footer sortable searchable fixed-columns">
           <div class="dataTable-top row">
             <div class="col-4">
-              <button class="btn btn-outline-primary" (click)="onOpenModal('add',$any(null))" style="width: 90px">
+              <button class="btn btn-outline-primary" (click)="onOpenModal('add',$any(null))"
+                      style="width: 90px; margin: 0 10px 0 0">
                 CREATE
               </button>
-              <!--            <button class="btn btn-danger" data-toggle="modal" data-target="#deleteAuthorModal">DELETE</button>-->
+              <button class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteAuthorModal"
+                      style="width: 90px;">
+                DELETE
+              </button>
             </div>
             <div class="col-5">
             </div>
@@ -249,7 +253,7 @@
                   <div id="filter-forms" class="row align-items-center">
                     <div class="col-md-8" style="display: flex;align-items: center">
                       <label style="margin-left:0">Name:</label>
-                      <input class="form-control" type="text" ngModel name="name" maxlength="128" style="width: 200px">
+                      <input class="form-control" type="text" ngModel name="name" maxlength="128" style="width: 200px; height: 30.8px">
                       <label>Rating from:</label>
                       <select class="dataTable-selector form-select" ngModel name="fromRating" style="width: auto">
                         <option>0</option>
@@ -515,7 +519,7 @@
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-sm" role="document">
     <div class="modal-content">
       <div class="modal-body text-center" style="word-break: break-all">
-        <h3>Delete this author?</h3>
+        <h3>Are you want to delete?</h3>
         <p> {{deletedAuthor.firstName}} {{deletedAuthor.secondName}}</p>
       </div>
       <div class="modal-footer">
