--- a/frontend/src/app/views/author/author.component.html
+++ b/frontend/src/app/views/author/author.component.html
@@ -230,12 +230,10 @@
           <div class="dataTable-top row">
             <div class="col-4">
               <button class="btn btn-outline-primary" (click)="onOpenModal('add',$any(null))"
-                      style="width: 90px; margin: 0 10px 0 0">
-                CREATE
+                      style="width: 90px; margin: 0 10px 0 0">CREATE
               </button>
-              <button class="btn btn-outline-danger" data-toggle="modal" data-target="#deleteAuthorModal"
-                      style="width: 90px;">
-                DELETE
+              <button class="btn btn-outline-danger" (click)="onOpenModal('bulkDelete', $any(null))" data-toggle="modal"
+                       style="width: 90px;">DELETE
               </button>
             </div>
             <div class="col-5">
@@ -253,7 +251,8 @@
                   <div id="filter-forms" class="row align-items-center">
                     <div class="col-md-8" style="display: flex;align-items: center">
                       <label style="margin-left:0">Name:</label>
-                      <input class="form-control" type="text" ngModel name="name" maxlength="128" style="width: 200px; height: 30.8px">
+                      <input class="form-control" type="text" ngModel name="name" maxlength="128"
+                             style="width: 200px; height: 30.8px">
                       <label>Rating from:</label>
                       <select class="dataTable-selector form-select" ngModel name="fromRating" style="width: auto">
                         <option>0</option>
@@ -288,6 +287,12 @@
             <table class="table table-striped dataTable-table">
               <thead>
               <tr>
+                <th id="tableMarks" class="text-center" style="width: 5%;">
+                  <mat-checkbox (change)="$event ? masterToggle() : null"
+                                [checked]="selection.hasValue() && isAllSelected()"
+                                [indeterminate]="selection.hasValue() && !isAllSelected()">
+                  </mat-checkbox>
+                </th>
                 <th id="tableFirstName" style="width: 40%;"><a (click)="sortByColumn('firstName')">First name
                   <em
                     *ngIf="pageSortFilterParameters.sortField === 'firstName' && !pageSortFilterParameters.reverseForSorting"
@@ -296,7 +301,7 @@
                   <em
                     *ngIf="pageSortFilterParameters.sortField === 'firstName' && pageSortFilterParameters.reverseForSorting"
                     class="fa fa-sort-desc"></em></a></th>
-                <th id="tableSecondName" style="width: 40%;"><a (click)="sortByColumn('secondName')">Second name
+                <th id="tableSecondName" style="width: 35%;"><a (click)="sortByColumn('secondName')">Second name
                   <em
                     *ngIf="pageSortFilterParameters.sortField === 'secondName' && !pageSortFilterParameters.reverseForSorting"
                     class="fa fa-sort-asc"></em>
@@ -317,11 +322,12 @@
               </thead>
               <tbody>
               <tr *ngFor="let author of authors">
-                <!--                  <td>-->
-                <!--                    <div class="form-check">-->
-                <!--                      <input class="form-check-inline" type="checkbox" value="" id="flexCheckDefault">-->
-                <!--                    </div>-->
-                <!--                  </td>-->
+                <td class="text-center align-middle">
+                  <mat-checkbox (click)="$event.stopPropagation()"
+                                (change)="$event ? selection.toggle(author) : null"
+                                [checked]="selection.isSelected(author)">
+                  </mat-checkbox>
+                </td>
                 <td>{{author.firstName}}</td>
                 <td>{{author.secondName}}</td>
                 <td>{{author.rating}}</td>
@@ -389,7 +395,7 @@
 </mat-paginator>
 
 <div class="modal fade text-left" id="detailAuthorModal" data-backdrop="static" tabindex="-1" role="dialog"
-     aria-labelledby="detailAuthorModal" aria-hidden="true">
+     aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -415,7 +421,7 @@
 </div>
 
 <div class="modal fade text-left" id="createAuthorModal" data-backdrop="static" tabindex="-1" role="dialog"
-     aria-labelledby="detailAuthorModal" aria-hidden="true">
+     aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -463,7 +469,7 @@
 </div>
 
 <div class="modal fade text-left" id="updateAuthorModal" data-backdrop="static" tabindex="-1" role="dialog"
-     aria-labelledby="detailAuthorModal" aria-hidden="true">
+     aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -514,8 +520,7 @@
   </div>
 </div>
 
-<div class="modal fade text-left" id="deleteAuthorModal" tabindex="-1" role="dialog"
-     aria-labelledby="detailAuthorModal" aria-hidden="true">
+<div class="modal fade text-left" id="deleteAuthorModal" tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-sm" role="document">
     <div class="modal-content">
       <div class="modal-body text-center" style="word-break: break-all">
@@ -524,6 +529,21 @@
       </div>
       <div class="modal-footer">
         <button class="btn btn-outline-danger" data-dismiss="modal" (click)="deleteAuthor(deletedAuthor.id)">Delete
+        </button>
+        <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade text-left" id="bulkDeleteAuthorsModal" tabindex="-1" role="dialog" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-body text-center">
+        <h3>Are you want to delete selected authors?</h3>
+      </div>
+      <div class="modal-footer">
+        <button class="btn btn-outline-danger" data-dismiss="modal" (click)="bulkDelete()">Delete
         </button>
         <button type="button" class="btn btn-outline-dark" data-dismiss="modal">Close</button>
       </div>
